--- a/Video 85 - Nodejs and NPM/package.json
+++ b/Video 85 - Nodejs and NPM/package.json
@@ -13,5 +13,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
+  },
+  "dependencies": {
+    "slugify": "^1.6.6"
   }
 }
